--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,17 @@
 doctype html
+mixin item(title, url)
+  li
+    a(href=url class=path == url ? 'active' : '')=title
+
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    ul  
+      +item('Strona główna', '/')
+      +item('Aktualnosci', '/news')
+      +item('Quiz', '/quiz')
+      +item('Admin', '/admin')
+
     block content
