--- a/views/news.pug
+++ b/views/news.pug
@@ -2,4 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+
+  form(method='get')
+    input(type='text' name='search' value=search || '')
+    input(type='submit' value='search')
+
+  each item in data
+    article
+      h1(class='title')=item.title
+      p(class='data')=item.created
+      p=item.description
