--- a/views/quiz.pug
+++ b/views/quiz.pug
@@ -2,4 +2,20 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  if (show)
+    form(method='post')
+      p Jaka pora roku
+      ul
+        each item in data
+          li
+            label=item.title
+            input(type='radio' name='quiz' value=item._id)
+      input(type="submit" value='just do it')
+  else  
+    h1 już
+    p wyniki
+    ul
+    each item in data
+      li #{item.title} #{item.vote} (#{Math.round(item.vote/sum*100)}%)
+    p #{sum}
+      
